[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde_unit_struct = "0.1.1"
shared = { path = "../shared" }
clap = { version = "3.1.18", features = ["derive"] }
rand = "0.8.4"